# diff-eq-comput-zdd

./: BUILD  CMakeLists.txt  LICENSE.txt  README.md  REMOVE
data/: Tw_coordinate.txt  Tw_distnormalized.txt  Tw_graph.txt  Tw_graphdist.txt  Tw_order.txt  Tw_terminals.txt  Tw_value_exp_final.txt  Tw_value_exp_initial.txt  Tw_value_inv_final.txt  Tw_value_inv_initial.txt  Tw_zdd.txt  Uninett2011_coordinate.txt  Uninett2011_distnormalized.txt  Uninett2011_graph.txt  Uninett2011_graphdist.txt  Uninett2011_order.txt  Uninett2011_terminals.txt  Uninett2011_value_exp_final.txt  Uninett2011_value_exp_initial.txt  Uninett2011_value_inv_final.txt  Uninett2011_value_inv_initial.txt  Uninett2011_zdd.txt  att48_distnormalized.txt  att48_graph.txt  att48_graphdist.txt  att48_order.txt  att48_value_exp_final.txt  att48_value_exp_initial.txt  att48_value_inv_final.txt  att48_value_inv_initial.txt  att48_zdd.txt  dantzig42_coordinate.txt  dantzig42_distnormalized.txt  dantzig42_graph.txt  dantzig42_graphdist.txt  dantzig42_order.txt  dantzig42_value_exp_final.txt  dantzig42_value_exp_initial.txt  dantzig42_value_inv_final.txt  dantzig42_value_inv_initial.txt  (+4 more)
src/: CMakeLists.txt  eqopt_exp.cpp  eqopt_exp_baseline.cpp  eqopt_exp_exsearch.cpp  eqopt_inv.cpp  eqopt_inv_baseline.cpp  eqopt_inv_exsearch.cpp  expcostweighted.hpp  inner_eqopt_exp.cpp  inner_eqopt_inv.cpp  invlinearcostweighted.hpp
src/mylib/: CMakeLists.txt  common.hpp  fwoptimizer.hpp  graph.cpp  graph.hpp  zdd.cpp  zdd.hpp
