cmake_minimum_required(VERSION 3.8)
project(stackelberg)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/..")

add_subdirectory(./mylib)
add_executable(inner_eqopt_inv inner_eqopt_inv.cpp)
add_executable(inner_eqopt_exp inner_eqopt_exp.cpp)
add_executable(eqopt_inv eqopt_inv.cpp)
add_executable(eqopt_inv_baseline eqopt_inv_baseline.cpp)
add_executable(eqopt_inv_exsearch eqopt_inv_exsearch.cpp)
add_executable(eqopt_exp eqopt_exp.cpp)
add_executable(eqopt_exp_baseline eqopt_exp_baseline.cpp)
add_executable(eqopt_exp_exsearch eqopt_exp_exsearch.cpp)

find_library(ADEPTLIB NAMES adept REQUIRED)
target_link_libraries(inner_eqopt_inv eqoptlib ${ADEPTLIB})
target_link_libraries(inner_eqopt_exp eqoptlib ${ADEPTLIB})
target_link_libraries(eqopt_inv eqoptlib ${ADEPTLIB})
target_link_libraries(eqopt_inv_baseline eqoptlib ${ADEPTLIB})
target_link_libraries(eqopt_inv_exsearch eqoptlib ${ADEPTLIB})
target_link_libraries(eqopt_exp eqoptlib ${ADEPTLIB})
target_link_libraries(eqopt_exp_baseline eqoptlib ${ADEPTLIB})
target_link_libraries(eqopt_exp_exsearch eqoptlib ${ADEPTLIB})